<resources>
    <string name="app_name">EvHunt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="new_reg">New Registration</string>
    <string name="Welcome">Welcome to EvHunt</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="phoneHint">Phone Number</string>
    <string name="logIn">LogIn</string>
    <string name="seeChapters">See Events</string>
    <string name="my_club">My Club</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="now_you_have_successfully">Now you have successfully done your registration! Now access any one of the sections below</string>
    <string name="make_a_new_event">Make a new Event</string>
    <string name="edit_details_of_club">Edit details of Club</string>
    <string name="see_event_approve_status">See Event Approve Status</string>
    <string name="draft_events">Draft Events</string>
    <string name="create_event">Create Event</string>
    <string name="basic_details">Basic Details</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="event_registration">Event Registration</string>
    <string name="description">Description</string>
    <string name="update_pics">Update PIcs</string>
    <string name="activity_image_trans">image_transition</string>
    <string name="club_description">The club helps develop life skills that helps foster growth and healthy competition needed for entrepreneurs</string>

</resources>
