<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Google Developers Group"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-thin"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/name"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_admin"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_you_have_successfully"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="64dp"
        android:layout_below="@+id/welcome"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/myclub_one"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_create_24dp" />

            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/make_a_new_event"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="0.16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/myclub_two"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_clubs_chapters_48dp" />

            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_details_of_club"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/myclub_one"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_48dp" />

            <TextView
                android:layout_width="62dp"
                android:layout_height="73dp"
                android:text="@string/see_event_approve_status"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/myclub_two"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_event_48" />

            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/make_a_new_event"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="0.14" />

        </LinearLayout>

        </LinearLayout>
</RelativeLayout>