<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_outlin_24dp"
            android:layout_gravity="end"
            android:layout_marginRight="-64dp"
            android:layout_marginTop="-64dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:padding="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/circle_grey"
                android:src="@drawable/ic_create_24dp"
                android:id="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_registration"
                android:textColor="@color/myclub_two"
                android:fontFamily="sans-serif"
                android:textSize="24sp"
                android:layout_marginTop="24dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:lines="5"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="true"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_pics"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start">

            <Button
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="+"
                android:textColor="#686868"
                android:textSize="48sp"/>
                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myclub_one"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="35dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_right_24dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>